apps/wallabag/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app: wallabag
spec:
  type: NodePort
  selector:
    app: wallabag
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30086
    protocol: TCP
